apps/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pve01
  annotations:
    field.cattle.io/ipAddresses: '["192.168.0.30"]'
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: pve-port
      port: 8006
      protocol: TCP
      targetPort: 8006
  selector: {}
  sessionAffinity: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pve01
subsets:
  - addresses:
      - ip: "192.168.0.30"
    ports:
      - name: https
        port: 8006
        protocol: TCP
