apps/proxmox/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve01
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/router.middlewares: networking-pve01-headers@kubernetescrd
spec:
  tls:
    - hosts:
        - proxmox.v34l.com
      secretName: proxmox-secret
  rules:
    - host: proxmox.v34l.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pve01
                port:
                  number: 8006
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: pve01-headers
spec:
  headers:
    customRequestHeaders:
      Host: "{host}"
      X-Real-IP: "{remoteip}"
      X-Forwarded-For: "{remoteip}"
      Upgrade: "{upgrade}"
      Connection: "{connection}"
    customResponseHeaders:
      X-Custom-Header: "CustomValue"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowOriginList:
      - "*"
    accessControlAllowHeaders:
      - Authorization
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
