apps/proxmox/proxmox-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: proxmox
  labels:
    app: proxmox
spec:
  type: ClusterIP
  ports:
    - name: proxmox-port
      port: 8006
      protocol: TCP
      targetPort: 8006
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-ingress
  namespace: proxmox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: proxmox.v34l.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox
                port:
                  number: 8006
  tls:
    - hosts:
        - proxmox.v34l.com
      secretName: proxmox-tls
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: proxmox
subsets:
  - addresses:
      - ip: "192.168.0.131"
    ports:
      - name: proxmox-port
        port: 8006
        protocol: TCP
